# MPU6050_MotionAnlyzer

./: CMakeLists.txt  LICENSE  README.md  main.c  main.h  mpu_calls.txt
kalman_filter/: kalman_filter.c  kalman_filter.h
mpu6050/: mpu6050.c  mpu6050.h
ringbuffer/: ringbuffer.c  ringbuffer.h
